                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.0

  *) [TS-1249] Disable ESI packed nodes by default.
   Author: Shu Kit Chan <chanshukit@gmail.com>

  *) [TS-1421] Modify the default log configs to avoid logging to stdout
   or stderr. This helps with TS-306 (but is not a solution for lack of
   log rotation on traffic.out).

  *) [TS-1415] return 400 if the length of request hostname is zero.

  *) [TS-1379] Better error message when mgmt socket is not available.

  *) [TS-1389] Replace TSHttpTxnServerRespNoStore() with
   TSHttpTxnServerRespNoStoreSet(), and move it to ts/ts.h. Author: Phil
   Sorber.

  *) Removed the (experiemental) TSHttpTxnClientDataGet() API. See
   TS-998 for more details.

  *) [TS-1408] Plugin to implement the stale-while-revalidate and
    stale-if-error features of RFC5861
    Author: Phil Sorber <phil@omniti.com>

  *) [TS-1406] add ESI to experimental plugins build

  *) [TS-1387] Allow proxy.config.http.insert_age_in_response to be overridden
    Author: Phil Sorber

  *) [TS-1392] Fix SNI certificate fallback path

  *) [TS-1385] generic atomic operations API

  *) [TS-1380] SSL wildcard lookup doesn't find the longest match

  *) [TS-1315] Fix URL parsing to handle non-HTTP schemes correctly.

  *) [TS-1322] CONNECT to parent proxy has URL with a trailing slash
    Author: Yakov Kopel

  *) [TS-1370] Restore original stale-wile-revalidate code for posterity
    Author: Phil Sorber

  *) [TS-1340] Improve IPv6 port example in records.comfig
    Author: Jan-Frode Myklebust

  *) [TS-1363] Cert path not working using intermdiate certificate

  *) [TS-895] Added version checks for bison and flex.

  *) [TS-1331] Wrong regex for ip in records config. Authors:
   Yakov Kopel and Uri Shachar.

  *) [TS-1348] Remove the active timeout when releasing or 
  binding server_session.

  *) [TS-1350] Detect and prefer LuaJIT

  *) [TS-538] Remove deprecated INKStats API
